golden/error/unescape_ubracket_not_scalar.test
"Invalid: \u[d800]"

# output:
 --> stdin:1:13
  |
1 | "Invalid: \u[d800]"
  |              ^~~~
Error: Invalid escape sequence: not a Unicode scalar value.
